--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ android {
     }
 
 }
-
+repositories {
+    maven { url 'https://jitpack.io' }
+}
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -68,5 +70,5 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
 
-
+    implementation "io.karn:notify:1.3.0"
 }
