--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
 
     implementation "io.karn:notify:1.3.0"
+    implementation "com.airbnb.android:lottie:3.6.0"
 }
