--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
 
     implementation "io.karn:notify:1.3.0"
     implementation "com.airbnb.android:lottie:3.6.0"
+    implementation 'com.itextpdf:itext7-core:7.1.11'
+
 }
