table activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReminderAssistant">
+        <activity android:name=".table.WholeViewSnappingActivity"></activity>
+        <activity android:name=".table.BaseActivity" />
+        <activity android:name=".table.TableActivity" />
         <activity android:name=".AddEventActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
