--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+
     defaultConfig {
         applicationId "com.hasandeniz.reminderassistant"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -73,5 +74,6 @@ dependencies {
     implementation "io.karn:notify:1.3.0"
     implementation "com.airbnb.android:lottie:3.6.0"
     implementation 'com.itextpdf:itext7-core:7.1.11'
+    implementation 'com.github.AndroidDeveloperLB:android-week-view:2.3.0.1'
 
 }
