--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hasandeniz.reminderassistant">
-
+    <uses-permission
+        android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReminderAssistant">
-        <activity android:name=".table.WholeViewSnappingActivity"></activity>
+        <activity android:name=".table.WholeViewSnappingActivity" />
         <activity android:name=".table.BaseActivity" />
         <activity android:name=".table.TableActivity" />
         <activity android:name=".AddEventActivity" />
