--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,9 +71,9 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
 
+    //telifliler
     implementation "io.karn:notify:1.3.0"
     implementation "com.airbnb.android:lottie:3.6.0"
-    implementation 'com.itextpdf:itext7-core:7.1.11'
     implementation 'com.github.AndroidDeveloperLB:android-week-view:2.3.0.1'
 
 }
