--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 repositories {
     maven { url 'https://jitpack.io' }
+
 }
 dependencies {
 
@@ -75,5 +76,6 @@ dependencies {
     implementation "io.karn:notify:1.3.0"
     implementation "com.airbnb.android:lottie:3.6.0"
     implementation 'com.github.AndroidDeveloperLB:android-week-view:2.3.0.1'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
 
 }
