--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,19 @@
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
     <application
+        android:fullBackupContent="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReminderAssistant">
-        <activity android:name=".AboutActivity" />
+        <activity android:name=".activities.AboutActivity" />
         <activity android:name=".table.WholeViewSnappingActivity" />
         <activity android:name=".table.BaseActivity" />
         <activity android:name=".table.TableActivity" />
-        <activity android:name=".AddEventActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.AddEventActivity" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
